Fix build and deploy scripts

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <script type="module" src="/src/main.jsx"></script>
 
 	<!-- jQuery Plugins -->
-	<script src="/src/assets/js/jquery.min.js"></script>
+	<!--<script src="/src/assets/js/jquery.min.js"></script>
 	<script src="/src/assets/js/bootstrap.min.js"></script>
 	<script src="/src/assets/js/slick.min.js"></script>
 	<script src="/src/assets/js/nouislider.min.js"></script>
 	<script src="/src/assets/js/jquery.zoom.min.js"></script>
-	<script src="/src/assets/js/main.js"></script>
+	<script src="/src/assets/js/main.js"></script>-->
 	<!-- jQuery Plugins -->
 
   </body>
